# mail-digest-aws

./: .gitignore  README.md  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: ci-cd.yml  dev-ci-cd.yml  manual-deploy.yml
events/: scheduled_event.json  sqs_event.json
src/: daily_summary_handler.py  requirements.txt  summary_worker_handler.py  telegram_webhook_handler.py
src/chains/: generate_aggregated_summary.py  summarize_email_chain.py
src/core/: logger.py  settings.py  supabase_client.py
src/domain/: delivery_channel.py  mail_account.py  user.py
src/langchain/chains/: generate_aggregated_summary.py  summarize_email_chain.py
src/langchain/schemas/: email_summary_schema.py
src/loaders/: gmail_loader.py
src/schemas/: email_summary_schema.py
src/services/: delivery_channel_service.py  email_summary_service.py  gmail_service.py  google_auth_service.py  mail_account_service.py  telegram_service.py  user_service.py
tests/integration/: test_api_gateway.py
tests/unit/: test_handler.py
